--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,7 @@
         "illuminate/routing": "5.4.*|5.5.*|5.6.*",
         "illuminate/support": "5.4.*|5.5.*|5.6.*"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^7.0"
-    },
+    "require-dev": { },
     "autoload": {
         "classmap": [
             "src/"
