--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
