Fix a facade name

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
                 "Helldar\\ExtendedRoutes\\ServiceProvider"
             ],
             "aliases": {
-                "ExtRouter": "Helldar\\ExtendedRoutes\\Facade"
+                "ExtRoute": "Helldar\\ExtendedRoutes\\Facade"
             }
         }
     }
