--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,17 @@
         {
             "name": "Andrey Helldar",
             "email": "helldar@ai-rus.com"
+        },
+        {
+            "name": "Maksim (Ellrion) Platonov",
+            "email": "ellrion11@gmail.com"
         }
     ],
     "require": {
         "php": ">=5.6.9",
         "illuminate/routing": "5.4.*|5.5.*|5.6.*",
-        "illuminate/support": "5.4.*|5.5.*|5.6.*"
+        "illuminate/support": "5.4.*|5.5.*|5.6.*",
+        "illuminate/database": "5.4.*|5.5.*|5.6.*"
     },
     "require-dev": {},
     "autoload": {
