--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     ],
     "require": {
         "php": ">=5.6.9",
-        "illuminate/routing": "5.4.*|5.5.*|5.6.*",
-        "illuminate/support": "5.4.*|5.5.*|5.6.*",
-        "illuminate/database": "5.4.*|5.5.*|5.6.*"
+        "illuminate/routing": "^5.4",
+        "illuminate/support": "^5.4",
+        "illuminate/database": "^5.4"
     },
     "require-dev": {},
     "autoload": {
