--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-github: [andrey-helldar, Ellrion]
+github: [andrey-helldar]
 custom: ["https://paypal.me/helldar", "https://money.yandex.ru/to/410012115955701"]
