--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
     ],
     "require": {
         "php": ">=5.6.9",
-        "illuminate/routing": "^5.4",
-        "illuminate/support": "^5.4",
-        "illuminate/database": "^5.4"
+        "illuminate/routing": "^5.4|^6.0",
+        "illuminate/support": "^5.4|^6.0",
+        "illuminate/database": "^5.4|^6.0"
     },
     "suggest": {
         "symfony/thanks": "Give thanks (in the form of a GitHub) to your fellow PHP package maintainers"
