--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
-        "illuminate/routing": "^5.4|^6.0|^7.0",
-        "illuminate/support": "^5.4|^6.0|^7.0",
-        "illuminate/database": "^5.4|^6.0|^7.0"
+        "php": "^7.2",
+        "illuminate/routing": "^6.0|^7.0",
+        "illuminate/support": "^6.0|^7.0",
+        "illuminate/database": "^6.0|^7.0"
     },
     "suggest": {
         "symfony/thanks": "Give thanks (in the form of a GitHub) to your fellow PHP package maintainers"
