--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/routing": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0",
-        "illuminate/database": "^6.0|^7.0"
+        "illuminate/routing": "^7.0",
+        "illuminate/support": "^7.0",
+        "illuminate/database": "^7.0"
     },
     "suggest": {
         "symfony/thanks": "Give thanks (in the form of a GitHub) to your fellow PHP package maintainers"
