--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,13 @@
 * text=auto
 
+.github export-ignore
+
+tests export-ignore
+
 .codecov.yml export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .styleci.yml export-ignore
+
+phpunit.php export-ignore
+phpunit.xml export-ignore
