--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,14 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.2.5|^8.0",
         "illuminate/routing": "^7.0|^8.0",
         "illuminate/support": "^7.0|^8.0",
         "illuminate/database": "^7.0|^8.0"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^5.0|^6.0",
+        "phpunit/phpunit": "^9.0"
     },
     "suggest": {
         "symfony/thanks": "Give thanks (in the form of a GitHub) to your fellow PHP package maintainers"
