--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 tidelift: "packagist/andrey-helldar/extended-routes"
 open_collective: "laravel-extended-routes"
-custom: ["https://paypal.me/helldar"]
+custom: [ "https://paypal.me/helldar", "https://yoomoney.ru/to/410012608840929" ]
