--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
 patreon: andrey_helldar
-tidelift: "packagist/andrey-helldar/extended-routes"
-open_collective: "laravel-extended-routes"
+open_collective: dragon-code
 custom: [ "https://paypal.me/helldar", "https://yoomoney.ru/to/410012608840929" ]
