--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -2,51 +2,16 @@ name: phpunit
 on: [ push ]
 
 jobs:
-    laravel_7x:
-        runs-on: ubuntu-latest
-
-        strategy:
-            fail-fast: true
-            matrix:
-                php: [ "7.2", "7.3", "7.4", "8.0" ]
-                laravel: [ "^7.0" ]
-
-        name: Laravel ${{ matrix.laravel }}, PHP ${{ matrix.php }}
-
-        steps:
-            -   name: Checkout code
-                uses: actions/checkout@v2
-
-            -   name: Setup PHP
-                uses: shivammathur/setup-php@v2
-                with:
-                    php-version: ${{ matrix.php }}
-                    extensions: curl, mbstring, zip, pcntl, pdo, pdo_sqlite, iconv
-                    coverage: xdebug
-
-            -   name: Composer self update
-                run: composer self-update
-
-            -   name: Install dependencies
-                run: |
-                    composer require laravel/framework:${{ matrix.laravel }}
-                    composer update --prefer-stable --prefer-dist --no-progress --no-interaction
-
-            -   name: Execute tests
-                run: |
-                    mkdir -p build/logs
-                    vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-
-    laravel_8x:
+    phpunit:
         runs-on: ubuntu-latest
 
         strategy:
             fail-fast: true
             matrix:
                 php: [ "7.3", "7.4", "8.0" ]
-                laravel: [ "^8.0" ]
+                laravel: [ "^7.0", "^8.0" ]
 
-        name: Laravel ${{ matrix.laravel }}, PHP ${{ matrix.php }}
+        name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}
 
         steps:
             -   name: Checkout code
@@ -59,15 +24,8 @@ jobs:
                     extensions: curl, mbstring, zip, pcntl, pdo, pdo_sqlite, iconv
                     coverage: xdebug
 
-            -   name: Composer self update
-                run: composer self-update
-
             -   name: Install dependencies
-                run: |
-                    composer require laravel/framework:${{ matrix.laravel }}
-                    composer update --prefer-stable --prefer-dist --no-progress --no-interaction
+                run: composer require --dev laravel/framework:${{ matrix.laravel }}
 
             -   name: Execute tests
-                run: |
-                    mkdir -p build/logs
-                    vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+                run: sudo vendor/bin/phpunit
