--- a/composer.json
+++ b/composer.json
@@ -48,13 +48,13 @@
     ],
     "require": {
         "php": "^7.3 || ^8.0",
-        "illuminate/database": "^7.0 || ^8.0 || ^9.0",
-        "illuminate/routing": "^7.0 || ^8.0 || ^9.0",
-        "illuminate/support": "^7.0 || ^8.0 || ^9.0"
+        "illuminate/database": "^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/routing": "^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/support": "^7.0 || ^8.0 || ^9.0 || ^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0",
-        "phpunit/phpunit": "^9.0"
+        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0 || ^8.0",
+        "phpunit/phpunit": "^9.6"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
