--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,32 +9,11 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "7.3", "7.4", "8.0", "8.1", "8.2" ]
-                laravel: [ "7.0", "8.0", "9.0", "10.0" ]
+                php: [ "8.1", "8.2", "8.3" ]
+                laravel: [ "10.0", "11.0" ]
                 exclude:
-                    -   laravel: "7.0"
+                    -   laravel: "11.0"
                         php: "8.1"
-
-                    -   laravel: "7.0"
-                        php: "8.2"
-
-                    -   laravel: "8.0"
-                        php: "7.3"
-
-                    -   laravel: "9.0"
-                        php: "7.3"
-
-                    -   laravel: "9.0"
-                        php: "7.4"
-
-                    -   laravel: "10.0"
-                        php: "7.3"
-
-                    -   laravel: "10.0"
-                        php: "7.4"
-
-                    -   laravel: "10.0"
-                        php: "8.0"
 
         name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}
 
