--- a/composer.json
+++ b/composer.json
@@ -43,16 +43,16 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
-        "illuminate/database": "^7.0 || ^8.0 || ^9.0 || ^10.0",
-        "illuminate/routing": "^7.0 || ^8.0 || ^9.0 || ^10.0",
-        "illuminate/support": "^7.0 || ^8.0 || ^9.0 || ^10.0"
+        "php": "^8.1",
+        "illuminate/database": "^10.0 || ^11.0",
+        "illuminate/routing": "^10.0 || ^11.0",
+        "illuminate/support": "^10.0 || ^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0 || ^8.0",
-        "phpunit/phpunit": "^9.6"
+        "orchestra/testbench": "^8.0 || ^9.0",
+        "phpunit/phpunit": "^11.0"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
