--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -26,7 +26,7 @@ jobs:
                 with:
                     php-version: ${{ matrix.php }}
                     extensions: curl, mbstring, zip, pcntl, pdo, pdo_sqlite, iconv
-                    coverage: none
+                    coverage: xdebug
 
             -   name: Install dependencies
                 run: composer require --dev laravel/framework:^${{ matrix.laravel }}
